--- a/README.adoc
+++ b/README.adoc
@@ -1,9 +1,10 @@
-# docker-octave
+:toc:
 
 ifdef::env-github[]
-image:https://travis-ci.org/kalemena/docker-octave.svg[Travis build status, link=https://travis-ci.org/kalemena/docker-octave]
-image:https://images.microbadger.com/badges/version/kalemena/octave.svg[Docker Version, link=https://microbadger.com/images/kalemena/octave]
-image:https://images.microbadger.com/badges/image/kalemena/octave.svg[Docker Hub, link=https://hub.docker.com/r/kalemena/octave/tags]
+image:https://github.com/kalemena/docker-octave/workflows/Pipeline/badge.svg[GitHub Build]
+image:https://img.shields.io/docker/v/kalemena/octave[Docker Hub, link=https://hub.docker.com/r/kalemena/octave/tags]
+image:https://img.shields.io/docker/pulls/kalemena/octave[Docker Hub, link=https://hub.docker.com/r/kalemena/octave/tags]
+image:https://img.shields.io/docker/image-size/kalemena/octave[Docker Hub, link=https://hub.docker.com/r/kalemena/octave/tags]
 endif::[]
 
 Octave in docker with UI.
